# agentic-playbooks

./: .env.example  .gitignore  AUTONOMOUS_PROTOCOL.md  CHANGELOG.md  CONTRIBUTING.md  INITIAL_ISSUES.md  LICENSE  README.md  coverage.xml  create_issues.ps1  create_issues.sh  pr_body.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md  task.md
.github/workflows/: ci.yml
docker/: docker-compose.yml
docker/.claude/: settings.local.json
docker/postgres/init/: 01-init.sql
docker/workspace/: Dockerfile
docs/: architecture.md  skills.md
playbooks/governance/: ai_decision_audit.yaml
src/: __init__.py
src/modules/: __init__.py
src/modules/governance/: __init__.py
src/modules/governance/skills/: __init__.py  decision_context_extractor.py  leadership_questions_generator.py  risk_identifier.py
src/playbooks/: __init__.py  batch.py  checkpoint.py  engine.py  errors.py  loader.py  metrics.py  models.py  tracer.py  validator.py  visualizer.py
src/skills/: __init__.py  base.py  registry.py  validation.py
tests/integration/: test_ai_decision_audit.py
tests/unit/: test_batch.py  test_checkpoint.py  test_decision_context_extractor.py  test_errors.py  test_leadership_questions_generator.py  test_metrics.py  test_playbook_engine.py  test_playbook_loader.py  test_risk_identifier.py  test_skill_base.py  test_skill_registry.py  test_tracer.py  test_validation.py  test_validator.py  test_visualizer.py
